# rsFAI

./: .gitignore  Cargo.toml  README.md
crates/rsfai/: Cargo.toml
crates/rsfai-calib/: Cargo.toml
crates/rsfai-calib/examples/: geometry_refinement.rs
crates/rsfai-calib/src/: control_points.rs  lib.rs  optimizer.rs  refinement.rs
crates/rsfai-calib/tests/: golden_calib.rs
crates/rsfai-calibrant/: Cargo.toml
crates/rsfai-core/: Cargo.toml
crates/rsfai-core/src/: compare.rs  dtype.rs  error.rs  golden.rs  lib.rs
crates/rsfai-core/tests/: golden_smoke.rs
crates/rsfai-detectors/: Cargo.toml
crates/rsfai-detectors/src/: detector.rs  lib.rs
crates/rsfai-detectors/tests/: detector_golden.rs
crates/rsfai-distortion/: Cargo.toml
crates/rsfai-distortion/examples/: distortion_correct.rs
crates/rsfai-distortion/src/: bispev.rs  distortion.rs  error.rs  lib.rs  spline.rs
crates/rsfai-distortion/tests/: golden_distortion.rs
crates/rsfai-fiber/: Cargo.toml
crates/rsfai-fiber/examples/: giwaxs_fiber.rs
crates/rsfai-fiber/src/: lib.rs
crates/rsfai-fiber/tests/: golden_fiber_integrator.rs
crates/rsfai-geometry/: Cargo.toml
crates/rsfai-geometry/examples/: geometry_params.rs
crates/rsfai-geometry/src/: corners.rs  corrections.rs  error.rs  fiber_units.rs  lib.rs  poni.rs  transform.rs  units.rs
crates/rsfai-geometry/tests/: corners_golden.rs  corrections_golden.rs  geometry_golden.rs  golden_fiber.rs
crates/rsfai-goniometer/: Cargo.toml
crates/rsfai-goniometer/examples/: goniometer.rs
crates/rsfai-goniometer/src/: expr.rs  lib.rs  multifiber.rs  optimizer.rs  refinement.rs  transform.rs
crates/rsfai-goniometer/tests/: golden_goniometer.rs
crates/rsfai-integrate/: Cargo.toml
crates/rsfai-integrate/examples/: native_bench.rs  native_bench_2d.rs
crates/rsfai-integrate/src/: azimuthal.rs  csc.rs  csr.rs  histogram.rs  lib.rs  lut.rs  split_histogram.rs
crates/rsfai-integrate/tests/: csc_golden.rs  csr_golden.rs  histogram_golden.rs  lut_golden.rs  split_histogram_golden.rs
crates/rsfai-io/: Cargo.toml
crates/rsfai-multigeometry/: Cargo.toml
crates/rsfai-multigeometry/examples/: multi_geometry.rs
crates/rsfai-multigeometry/src/: lib.rs
crates/rsfai-multigeometry/tests/: golden_multigeometry.rs
crates/rsfai-opencl/: Cargo.toml
crates/rsfai-opencl/kernels/: README.md
crates/rsfai-opencl/src/: common.rs  csr.rs  histogram.rs  lib.rs  lut.rs  program.rs
crates/rsfai-opencl/tests/: csr_opencl_golden.rs  opencl_golden.rs
crates/rsfai-peaks/: Cargo.toml
crates/rsfai-preproc/: Cargo.toml
crates/rsfai-preproc/src/: lib.rs  preproc.rs
crates/rsfai-preproc/tests/: preproc_golden.rs
crates/rsfai-py/: Cargo.toml  README.md  pyproject.toml
crates/rsfai-py/src/: gpu.rs  lib.rs
crates/rsfai/examples/: calcfrom_image.rs  integrate2d_positions.rs  integrate_basic.rs  orientation.rs  pixel_splitting.rs
crates/rsfai/src/: error.rs  lib.rs
crates/rsfai/tests/: dropin_golden.rs  golden_calcfrom.rs  integrate_with_golden.rs
doc/: bit-exact-ladder.md  examples-from-pyfai.md
golden/: README.md  bench_compare.py  bench_gpu.py  bench_npt.py  gen_golden.py  gen_golden_calcfrom.py  gen_golden_calib.py  gen_golden_calibrant.py  gen_golden_corrections.py  gen_golden_distortion.py  gen_golden_fiber.py  gen_golden_fiber_integrator.py  gen_golden_goniometer.py  gen_golden_io.py  gen_golden_multigeometry.py  gen_golden_opencl.py  gen_golden_peaks.py  requirements.txt  rsfai_backend.py  rsfai_calib2.py  test_backend_gpu.py  test_backend_subclass.py  test_calib2_launcher.py  test_inprocess_dropin.py  test_inprocess_parity.py
golden/datasets_calcfrom/: calcfrom1d__dark.npy  calcfrom1d__flat.npy  calcfrom1d__img_flatdark.npy  calcfrom1d__img_mask.npy  calcfrom1d__img_nosa.npy  calcfrom1d__img_sa.npy  calcfrom1d__intensity.npy  calcfrom1d__interp_pyttha.npy  calcfrom1d__mask.npy  calcfrom1d__tth.npy  calcfrom1d__ttha.npy  fake_cal_image__img.npy  fake_xrpdp__intensity.npy  manifest.json
golden/datasets_calib/: calibrant_2th.npy  calibrant_dspacing.npy  control_points.npy  converged_param6.npy  converged_param6_fix_rot3.npy  expected_2th.npy  fixed_param6.npy  manifest.json  residual.npy  tth_measured.npy
golden/datasets_calibrant/: AgBh__wl1.000e-10__peaks_2th_deg.npy  AgBh__wl1.000e-10__peaks_2th_rad.npy  AgBh__wl1.000e-10__peaks_q_nmm1.npy  AgBh__wl1.540e-10__dspacing.npy  AgBh__wl1.540e-10__peaks_2th_deg.npy  AgBh__wl1.540e-10__peaks_2th_rad.npy  AgBh__wl1.540e-10__peaks_q_Am1.npy  Al__wl1.000e-10__dspacing.npy  Al__wl1.000e-10__peaks_2th_deg.npy  Al__wl1.000e-10__peaks_q_Am1.npy  Al__wl1.000e-10__two_theta.npy  Al__wl7.000e-11__peaks_2th_deg.npy  Al__wl7.000e-11__peaks_q_nmm1.npy  Al__wl7.000e-11__two_theta.npy  CeO2__wl1.000e-10__dspacing.npy  CeO2__wl1.000e-10__peaks_2th_deg.npy  CeO2__wl1.000e-10__peaks_2th_rad.npy  CeO2__wl1.000e-10__peaks_q_Am1.npy  CeO2__wl1.000e-10__peaks_q_nmm1.npy  CeO2__wl1.540e-10__dspacing.npy  CeO2__wl1.540e-10__peaks_2th_deg.npy  CeO2__wl1.540e-10__peaks_2th_rad.npy  CeO2__wl1.540e-10__peaks_q_Am1.npy  CeO2__wl1.540e-10__peaks_q_nmm1.npy  LaB6__wl1.000e-10__dspacing.npy  LaB6__wl1.000e-10__peaks_2th_deg.npy  LaB6__wl1.000e-10__peaks_q_Am1.npy  LaB6__wl1.000e-10__peaks_q_nmm1.npy  LaB6__wl1.000e-10__two_theta.npy  LaB6__wl1.540e-10__dspacing.npy  LaB6__wl1.540e-10__peaks_2th_deg.npy  LaB6__wl1.540e-10__peaks_q_Am1.npy  LaB6__wl1.540e-10__peaks_q_nmm1.npy  LaB6__wl1.540e-10__two_theta.npy  LaB6__wl2.000e-10__dspacing.npy  LaB6__wl2.000e-10__peaks_2th_deg.npy  LaB6__wl2.000e-10__peaks_q_Am1.npy  LaB6__wl2.000e-10__peaks_q_nmm1.npy  LaB6__wl2.000e-10__two_theta.npy  Si__wl1.000e-10__dspacing.npy  (+22 more)
golden/datasets_distortion/: manifest.json  out_bisplev_x.npy  out_bisplev_y.npy  out_bisplev_zx.npy  out_bisplev_zy.npy  out_dist_corrected.npy  out_spline_x_coeff.npy  out_spline_y_coeff.npy  out_spline_y_knotsx.npy  out_spline_y_knotsy.npy
golden/datasets_fiber/: manifest.json  out_c0__chigi.npy  out_c0__qbeam.npy  out_c0__qhorz.npy  out_c0__qip.npy  out_c0__qoop.npy  out_c0__scathorz.npy  out_c0__scatvert.npy  (+33 more)
(+1101 files in other folders)
