[workspace]
resolver = "2"
members = [
    "crates/rsfai-core",
    "crates/rsfai-geometry",
    "crates/rsfai-detectors",
    "crates/rsfai-preproc",
    "crates/rsfai-integrate",
    # rsfai-py is built via maturin (M7); excluded from the default cargo build
    # because it needs the PyO3 extension-module linkage. Re-enable when M7 lands.
]
exclude = ["crates/rsfai-py"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/stevek/rsFAI"
rust-version = "1.94"

[workspace.dependencies]
# Internal crates
rsfai-core = { path = "crates/rsfai-core" }
rsfai-geometry = { path = "crates/rsfai-geometry" }
rsfai-detectors = { path = "crates/rsfai-detectors" }
rsfai-preproc = { path = "crates/rsfai-preproc" }
rsfai-integrate = { path = "crates/rsfai-integrate" }

# External
ndarray = "0.16"
ndarray-npy = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-traits = "0.2"
thiserror = "2"

# Bit-exact accumulation requires a deterministic, serial summation order in the
# default build. Parallelism (rayon) is opt-in behind a feature flag and is never
# the bit-exact gate (see doc/bit-exact-ladder.md).
[profile.release]
# No fast-math / FMA contraction: we need IEEE-754 semantics to match pyFAI.
# (codegen-units left default; determinism here comes from serial accumulation,
# not from codegen-units.)
