[workspace]
resolver = "2"
members = [
    "crates/rsfai-core",
    "crates/rsfai-geometry",
    "crates/rsfai-detectors",
    "crates/rsfai-preproc",
    "crates/rsfai-integrate",
    "crates/rsfai-opencl",
    "crates/rsfai",
    "crates/rsfai-multigeometry",
    "crates/rsfai-fiber",
    "crates/rsfai-calibrant",
    "crates/rsfai-distortion",
    "crates/rsfai-peaks",
    "crates/rsfai-calib",
    # rsfai-py (the PyO3 drop-in) is intentionally excluded from the default
    # cargo build/test: it is a cdylib needing extension-module linkage, built
    # standalone with maturin. See crates/rsfai-py/README.md.
]
exclude = ["crates/rsfai-py"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/stevek/rsFAI"
rust-version = "1.94"

[workspace.dependencies]
# Internal crates
rsfai-core = { path = "crates/rsfai-core" }
rsfai-geometry = { path = "crates/rsfai-geometry" }
rsfai-detectors = { path = "crates/rsfai-detectors" }
rsfai-preproc = { path = "crates/rsfai-preproc" }
rsfai-integrate = { path = "crates/rsfai-integrate" }
rsfai-opencl = { path = "crates/rsfai-opencl" }
rsfai = { path = "crates/rsfai" }
rsfai-multigeometry = { path = "crates/rsfai-multigeometry" }
rsfai-fiber = { path = "crates/rsfai-fiber" }
rsfai-calibrant = { path = "crates/rsfai-calibrant" }
rsfai-distortion = { path = "crates/rsfai-distortion" }
rsfai-peaks = { path = "crates/rsfai-peaks" }
rsfai-calib = { path = "crates/rsfai-calib" }

# External
ndarray = "0.16"
ndarray-npy = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-traits = "0.2"
thiserror = "2"
rayon = "1"
# Iterative optimizer used ONLY by rsfai-calib's `refine()` (and later
# rsfai-goniometer). Isolated to the calibration layer; the bit-exact
# integration/geometry core never depends on it.
argmin = { version = "0.11", default-features = false }
argmin-math = { version = "0.5", default-features = true }

# Parallelism (rayon) is ON by default. The two classes of work parallelize
# differently w.r.t. bit-exactness (see doc/bit-exact-ladder.md):
#   * per-pixel MAPs (preproc, geometry transform, solid-angle/polarization,
#     unit centers) and CSR *apply* (one output bin per thread) stay bit-exact —
#     each output element is an order-independent pure function of its index, so
#     the golden gate for those stages remains 0-ULP.
#   * the histogram cross-pixel *accumulation* sums into shared bins; the rayon
#     fold/reduce reorders f64 adds, so it is NOT bit-reproducible and is
#     validated at relative error <= 1e-6 (f64 reorder error ~ n·eps ≈ 2e-10).
# CSR *build* stays serial (the per-bin LUT entry order is order-sensitive).
[profile.release]
# No fast-math / FMA contraction: we need IEEE-754 semantics to match pyFAI.
# (codegen-units left default; determinism here comes from serial accumulation,
# not from codegen-units.)
