[package]
name = "rsfai-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types, dtype contract, and golden bit/ULP comparison utilities for rsFAI"

[dependencies]
ndarray.workspace = true
ndarray-npy.workspace = true
serde.workspace = true
serde_json.workspace = true
num-traits.workspace = true
thiserror.workspace = true
