[package]
name = "rsfai-detectors"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Detector model, registry, and pixel-corner geometry for rsFAI (M2)"

[dependencies]
rsfai-core.workspace = true
ndarray.workspace = true
thiserror.workspace = true
