[package]
name = "rsfai-distortion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rsfai-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
ndarray.workspace = true
serde_json.workspace = true
