[package]
name = "rsfai-geometry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "PONI geometry, coordinate transforms (tth/chi/q/r) and units for rsFAI (M1)"

[dependencies]
thiserror.workspace = true
# Solid-angle / polarization are Geometry-level corrections (they need PONI +
# the detector's pixel positions), matching pyFAI where they are Geometry methods.
rsfai-detectors.workspace = true
rayon.workspace = true

[dev-dependencies]
# Golden tests load .npy + compare (rsfai-core) and reshape with ndarray.
rsfai-core.workspace = true
ndarray.workspace = true
