[package]
name = "rsfai-integrate"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Integration engines: histogram, bbox/full pixel-splitting, sparse builder, CSR build+apply (M4-M6)"

[dependencies]
rsfai-core.workspace = true
rsfai-geometry.workspace = true
rsfai-detectors.workspace = true
rsfai-preproc.workspace = true
ndarray.workspace = true
rayon.workspace = true
