[package]
name = "rsfai-multigeometry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rsfai.workspace = true
rsfai-core.workspace = true
rsfai-geometry.workspace = true

[dev-dependencies]
serde_json.workspace = true
