[package]
name = "rsfai-preproc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Per-pixel preprocessing (dark/flat/solidangle/polarization/normalization) for rsFAI (M3)"

[dependencies]
rsfai-core.workspace = true
ndarray.workspace = true
