[package]
name = "rsfai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rsfai-core.workspace = true
rsfai-geometry.workspace = true
rsfai-detectors.workspace = true
rsfai-preproc.workspace = true
rsfai-integrate.workspace = true
thiserror.workspace = true
